fixed posts alignment

--- a/css/posts.css
+++ b/css/posts.css
@@ -6,3 +6,8 @@
 body{
     color: black
 }
+
+main{
+    margin: 10%;
+    position: relative;
+}
